# snake-game

./: CMakeLists.txt  CMakePresets.json  constants.hpp  main.cpp
food/: food.cpp  food.hpp
snake/: snake.cpp  snake.hpp
